<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/heightwrapwidthmatch"
    tools:context=".ui.main.MoveDetailUserActivity"
    android:background="@color/grey_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/heightmatchwidthmatch">
        <ImageView
            android:id="@+id/img_item_detail_photo"
            style="@style/Avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/detailphoto"/>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/detailname"
            style="@style/heightwrapwidthwrap"
            android:layout_marginTop="8dp"
            android:text="@string/detailname"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/detailUsername"
            app:layout_constraintStart_toStartOf="@+id/detailUsername"
            app:layout_constraintTop_toBottomOf="@+id/img_item_detail_photo" />

        <TextView
            android:id="@+id/detailUsername"
            style="@style/heightwrapwidthwrap"
            android:text="@string/detailusername"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/detailCompany"
            app:layout_constraintStart_toStartOf="@+id/detailCompany"
            app:layout_constraintTop_toBottomOf="@+id/detailname" />

        <TextView
            android:id="@+id/detailCompany"
            style="@style/heightwrapwidthwrap"
            android:layout_marginTop="8dp"
            android:text="@string/detailcompany"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailUsername" />

        <TextView
            android:id="@+id/detailAlamat"
            style="@style/heightwrapwidthwrap"
            android:text="@string/detailAlamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCompany" />

        <TextView
            android:id="@+id/detailfollower"
            style="@style/heightwrapwidthwrap"
            android:text="@string/detailfollower"
            app:layout_constraintStart_toStartOf="@+id/img_item_detail_photo"
            app:layout_constraintTop_toBottomOf="@+id/detailAlamat" />

        <TextView
            android:id="@+id/textfollower"
            style="@style/heightwrapwidthwrap"
            android:layout_marginStart="8dp"
            android:text="@string/textfollower"
            app:layout_constraintBottom_toBottomOf="@+id/detailfollower"
            app:layout_constraintStart_toEndOf="@+id/detailfollower"
            app:layout_constraintTop_toTopOf="@+id/detailfollower" />

        <TextView
            android:id="@+id/detailfollowing"
            style="@style/heightwrapwidthwrap"
            android:layout_marginEnd="8dp"
            android:text="@string/detailfollowing"
            app:layout_constraintEnd_toStartOf="@+id/textfollowing"
            app:layout_constraintTop_toBottomOf="@+id/detailAlamat" />

        <TextView
            android:id="@+id/textfollowing"
            style="@style/heightwrapwidthwrap"
            android:text="@string/textfollowing"
            app:layout_constraintBottom_toBottomOf="@+id/detailfollowing"
            app:layout_constraintEnd_toEndOf="@+id/img_item_detail_photo"
            app:layout_constraintTop_toTopOf="@+id/detailfollowing" />

        <TextView
            android:id="@+id/detailRepository"
            style="@style/heightwrapwidthwrap"
            android:text="@string/detailrepository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfollower" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/detailRepository"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="415dp"
            android:layout_height="292dp"
            app:layout_constraintEnd_toEndOf="@+id/tabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/float_btn"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            app:tint="@color/pink"
            app:backgroundTint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>